# OfflineAnalysisTool

./: .gitignore  CMakeLists.txt  OfflineAnalysis.sh  ProcesData.sh  ProcesNoise.sh  README  README.md  READMESHELL.md  analyse_noise.cc  make_graphs.cc  make_histos.cc  make_histos_cc.d  makefile  makefile~  offlineanalysis.sh
config/: Test.json
include/: Clusters.h  RPCGeometry.h  SortDataFile.h  utils.h
src/: Clusters.cc  SortDataFile.cc  main.cc  utils.cc
